fixed some project sizing and removed scrollbars again

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -8,3 +8,11 @@ body {
     overflow-y: hidden;
 
 }
+
+:root {
+    scrollbar-width: none;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
