--- a/src/css/home.css
+++ b/src/css/home.css
@@ -23,11 +23,6 @@
     height: 100vh;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
-    scrollbar-width: none;
-}
-
-#home::-webkit-scrollbar {
-    display: none;
 }
 
 #home>section {
