--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -170,14 +170,26 @@
         --project-width: 120px;
     }
 
+    .project {
+        border-radius: 10px;
+    }
+
     #projects-container {
-        height: 50%;
+        height: 290px;
+        max-height: 290px;
+        width: 100%;
     }
 
     #project-info {
-        height: 50%;
+        height: 290px;
+        max-height: 290px;
         padding-top: 0;
         padding-inline: 0;
+        gap: 20px;
+    }
+
+    #project-description {
+        font-size: 16px;
     }
 
     #project-title {
